--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@
         <header>
             <div class="logo-container">
                 <div class="logo-icon">🫁</div>
-                <span class="logo-text">PhysioGuide</span>
+                <span class="logo-text">Physiology</span>
             </div>
             <h1>Physiology Study Guide</h1>
-            <p class="subtitle">Master the Respiratory and Urinary Systems with interactive, concept-focused learning designed to help you truly understand — not just memorize.</p>
+            <p class="subtitle">Use this as bonus learning material for Core Concepts and learning. Adjusted for Dr. D's class at IVC hopefully.</p>
         </header>
 
         <div class="chapters-grid">
@@ -494,36 +494,18 @@
                 <div class="arrow-icon">→</div>
             </a>
         </div>
-
-        <div class="features-section">
-            <div class="feature">
-                <div class="feature-icon">💡</div>
-                <h3>Concept-First Approach</h3>
-                <p>Learn the "why" before the "what" with Big Idea boxes and progressive explanations.</p>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">🔗</div>
-                <h3>Clinical Connections</h3>
-                <p>See how physiology applies to real medical conditions and patient care.</p>
-            </div>
-            <div class="feature">
-                <div class="feature-icon">✅</div>
-                <h3>Self-Assessment</h3>
-                <p>Test your understanding with interactive questions and reveal-able answers.</p>
-            </div>
-        </div>
     </main>
 
     <footer>
         <div class="footer-content">
-            <p class="footer-text">Created as an interactive study resource for physiology students</p>
+            <p class="footer-text">Created as a study resource for physiology students</p>
             <a href="https://www.linkedin.com/in/bryankhamly/" target="_blank" rel="noopener noreferrer" class="linkedin-link">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                 </svg>
                 Connect with Bryan Khamly
             </a>
-            <p class="credits">© 2024 PhysioGuide • Built for learning</p>
+            <p class="credits">© 2025</p>
         </div>
     </footer>
 </body>
